# bevy-game-template

./: .gitlab-ci.yml  README.md
.github/workflows/: cargo-generate.yml  publish-template.yml
.undodir/: %home%maks%Dokumenty%rust%bevy%bevy-game-template%Cargo.toml  %home%maks%Dokumenty%rust%bevy%bevy-game-template%README.md  %home%maks%Dokumenty%rust%bevy%bevy-game-template%cargo-generate.toml  %home%maks%Dokumenty%rust%bevy%bevy-game-template%src%lib.rs  %home%maks%Dokumenty%rust%bevy%bevy-game-template%src%main.rs
template/: Cargo.toml  cargo-generate.toml
template/src/: lib.rs  main.rs
website/: index.html
